# donsend

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 34d5227ae707_create_initial_schema.py  ab160c36a532_add_sessions_table.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py
backend/app/schemas/: auth.py
backend/scripts/: create_invite.py
backend/tests/: conftest.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_friendship_constraints.py  test_security.py
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-jwt-storage.md  0003-websocket-auth.md  0004-v1-database-schema.md  0005-refresh-token-rotation.md  README.md
docs/requirements/: TEMPLATE.md  v1.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
